.tmux.conf edited online with Bitbucket

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,28 +10,27 @@
 # by Daniel aka Daniel Bourne
 # 
 #
+############################################################################
+############################################################################
+# Reset Prefix
+############################################################################ 
+set -g prefix C-a
 
-
-# Set status bar
-# set-option -g status-left ‘#[fg=green]#H’
-
-# status bar colors etc -----------------------
-# set-option -g status-bg black
-# set-option -g status-fg white
-# set-option -g status-interval 5
-# set-option -g visual-activity on
-# set-window-option -g monitor-activity on
-# set-window-option -g window-status-current-fg white
-
+############################################################################
+# Global options
+############################################################################ 
 # Fix ctrl+left/right keys work right
 set-window-option -g xterm-keys on
-
-# command prefix -----------------------
-set -g prefix C-a
 
 # start window indexing at one instead of zero
 set -g base-index 1
 
-unbind % # remove default binding since replacing
+# Set 'v' for vertical and 'h' for horizontal split
 bind v split-window -h
 bind h split-window -v
+
+############################################################################
+# Unbindings
+############################################################################ 
+# remove default binding since replacing
+unbind %
