Configuring colors for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@
 #
 # by Daniel aka Daniel Bourne
 # 
+# Template source: https://gist.github.com/completit/c3c13627078b63b2376c
 #
 ############################################################################
 ############################################################################
