Change author name

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@
 #
 #############################
 #
-# by Daniel aka Daniel Bourne
+# by Minca Daniel Andrei
 # 
 # Template source: https://gist.github.com/completit/c3c13627078b63b2376c
 #
