Format the report date to display timestamp
Taskwarrior is not so precise when I display a long report.

As a result display the timestamp after a task is started or stopped

--- a/.taskrc
+++ b/.taskrc
@@ -27,3 +27,5 @@ data.location=~/.task
 weekstart=Monday
 color.blocking=red on white
 journal.time=yes
+dateformat.report=d/m/Y H:N:S
+dateformat.annotation=d/m/Y H:N:S
