Use vim-like keys for tmux pane-switching
* bind 'h,j,k,l' for switching panes 'Left,Down,Up,Right'
* bind same keys for resizing panes
* unbind arrow keys
* trim out white spaces from vim with ':%s/\s\+$//'
* remap the 'horizontal-split' key on 'b' since 'h' is used as a Left
  key

Signed-off-by: Minca Daniel Andrei <mandrei17@gmail.com>

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,29 +1,29 @@
-#       _                _        _  _     
-#      | |              (_)      | |( )    
-#    __| |  __ _  _ __   _   ___ | ||/ ___ 
+#       _                _        _  _
+#      | |              (_)      | |( )
+#    __| |  __ _  _ __   _   ___ | ||/ ___
 #   / _` | / _` || '_ \ | | / _ \| |  / __|
 #  | (_| || (_| || | | || ||  __/| |  \__ \
 #   \__,_| \__,_||_| |_||_| \___||_|  |___/
-#   _                                      
-#  | |                                     
-#  | |_  _ __ ___   _   _ __  __           
-#  | __|| '_ ` _ \ | | | |\ \/ /           
-#  | |_ | | | | | || |_| | >  <            
-#   \__||_| |_| |_| \__,_|/_/\_\           
-#                                          
-#                                          
- 
+#   _
+#  | |
+#  | |_  _ __ ___   _   _ __  __
+#  | __|| '_ ` _ \ | | | |\ \/ /
+#  | |_ | | | | | || |_| | >  <
+#   \__||_| |_| |_| \__,_|/_/\_\
+#
+#
+
 # Template source: https://gist.github.com/completit/c3c13627078b63b2376c
 #
 ############################################################################
 ############################################################################
 # Reset Prefix
-############################################################################ 
+############################################################################
 set -g prefix C-a
 
 ############################################################################
 # Global options
-############################################################################ 
+############################################################################
 # Fix ctrl+left/right keys work right
 set-window-option -g xterm-keys on
 
@@ -32,13 +32,34 @@ set -g base-index 1
 
 # Set 'v' for vertical and 'h' for horizontal split
 bind v split-window -h
-bind h split-window -v
+bind b split-window -v
+
+# vim-like pane switching
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+# vim-like pane resizing
+bind -r C-k resize-pane -U
+bind -r C-j resize-pane -D
+bind -r C-h resize-pane -L
+bind -r C-l resize-pane -R
 
 ############################################################################
 # Unbindings
-############################################################################ 
+############################################################################
 # remove default binding since replacing
 unbind %
+unbind Up
+unbind Down
+unbind Left
+unbind Right
+
+unbind C-Up
+unbind C-Down
+unbind C-Left
+unbind C-Right
 
 ########################################
 # Define my custom menu bar
@@ -56,15 +77,15 @@ set -g visual-activity on
 # set color for status bar
 set-option -g status-bg colour235 #base02
 set-option -g status-fg yellow #yellow
-set-option -g status-attr dim 
+set-option -g status-attr dim
 
 # set window list colors - red for active and cyan for inactive
 set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg colour236 
+set-window-option -g window-status-bg colour236
 set-window-option -g window-status-attr dim
 
 set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg colour236 
+set-window-option -g window-status-current-bg colour236
 set-window-option -g window-status-current-attr bright
 
 # show host name and IP address on left side of status bar
