Preserve directory when creating tmux panes
Everytime a new pane was open the $HOME directory was used.

As a result, instruct tmux to open a new pane in the same work directory
`pwd`.

As seen on:
http://unix.stackexchange.com/a/146826/50394

Signed-off-by: Minca Daniel Andrei <mandrei17@gmail.com>

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -31,8 +31,8 @@ set-window-option -g xterm-keys on
 set -g base-index 1
 
 # Set 'v' for vertical and 'h' for horizontal split
-bind v split-window -h
-bind b split-window -v
+bind v split-window -h -c '#{pane_current_path}'
+bind b split-window -v -c '#{pane_current_path}'
 
 # vim-like pane switching
 bind -r k select-pane -U
