--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq bats
 scripts:
-  - bats tests/bats
+  - sudo bats tests/bats
