--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq bats
 scripts:
-  - /usr/bin/bats tests/bats
+  - bats --version
