Manipulate the docker container easier
Signed-off-by: Minca Daniel Andrei <mandrei17@gmail.com>

--- a/tests/docker/docker-compose.yml
+++ b/tests/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 app:
   build: .
   volumes:
-    - ./../../dotfiles:/dotfiles
+    - ./../../../dotfiles:/dotfiles
   working_dir: /dotfiles
   command: bats tests/bats
   restart: always
