Test docker install in container
Signed-off-by: Minca Daniel Andrei <mandrei17@gmail.com>

--- a/tests/docker/docker-compose.yml
+++ b/tests/docker/docker-compose.yml
@@ -3,5 +3,4 @@ app:
   volumes:
     - ./../../../dotfiles:/dotfiles
   working_dir: /dotfiles
-  command: bats tests/bats
-  restart: always
+  command: ./init installDocker
