Fixing installers to pass tests
Signed-off-by: Minca Daniel Andrei <mandrei17@gmail.com>

--- a/tests/docker/Dockerfile
+++ b/tests/docker/Dockerfile
@@ -12,4 +12,5 @@ RUN add-apt-repository ppa:duggan/bats --yes \
                           git \
                           vim \
                           wget \
-                          curl
+                          curl \
+                          unzip
