Fixed Font installer; now fixing NodeJS installer
NodeJS installer throws 404 when pulling the tarball.

Solve URL problem and make test pass.

Signed-off-by: Minca Daniel Andrei <mandrei17@gmail.com>

--- a/tests/docker/docker-compose.yml
+++ b/tests/docker/docker-compose.yml
@@ -4,6 +4,6 @@ app:
     - ./../../../dotfiles:/dotfiles
   working_dir: /dotfiles
   tty: true
-  # command: bats tests/bats/hackfont.bats
+  # command: bats tests/bats/nodejs.bats
   env_file:
     - ./../../vars.env
