--- a/tests/docker/docker-compose.yml
+++ b/tests/docker/docker-compose.yml
@@ -4,6 +4,6 @@ app:
     - ./../../../dotfiles:/dotfiles
   working_dir: /dotfiles
   tty: true
-  # command: bats tests/bats/nodejs.bats
+  # command: bats tests/bats
   env_file:
     - ./../../vars.env
