Uncomment test runner command from docker-compose
Signed-off-by: Minca Daniel Andrei <mandrei17@gmail.com>

--- a/tests/docker/docker-compose.yml
+++ b/tests/docker/docker-compose.yml
@@ -3,7 +3,7 @@ app:
   volumes:
     - ./../../../dotfiles:/dotfiles
   working_dir: /dotfiles
-  tty: true
-  # command: bats tests/bats
+  # tty: true
+  command: bats tests/bats
   env_file:
     - ./../../vars.env
