Fix post-install cleanup for sublime
After Sublime installation, cleanup must be performed.

As a result:
* remove the downloaded .deb package
* refactor code by moving URL's to env file

Resolves: #61

Signed-off-by: Minca Daniel Andrei <mandrei17@gmail.com>

--- a/vars.env
+++ b/vars.env
@@ -8,6 +8,11 @@ REPO_PATH="$DOWNLOADS_DIR/dotfiles"
 DOTFILES_PATH="$REPO_PATH/dotfiles"
 DROPBOX_VERSION="dropbox_2015.10.28_amd64.deb"
 ADOBE_PACKAGE="AdbeRdr9.5.5-1_i386linux_enu.deb"
+SUBLIME_DATA=(
+  "http://c758482.r82.cf2.rackcdn.com/sublime-text_build-3065_amd64.deb"
+  "sublime-text_build-3065_amd64.deb"
+  "http://cl.ly/1z0S25150Y0I/sublime_text%20crack%20linux%2064%20build%203065"
+)
 
 #----------------------------------------------------------------------
 #  HELPER FUNCTIONS
